syntax = "proto3";

package room_service;

message TimeSlot
{
  string start_time = 1;
  string end_time = 2;
}

message ComputeIntervalsRequest
{
  string room_id = 1;
  string date = 2;
  string start_time = 3;
  string end_time = 4;
}

message ComputeIntervalsResponse
{
  repeated TimeSlot available_slots = 1;
}

message Conflict
{
  string booking_id = 1;
  string start_time = 2;
  string end_time = 3;
  string status = 4;
  string user_id = 5;
}

message ValidationDetails
{
  bool duration_valid = 1;
  bool working_hours_valid = 2;
  bool no_conflicts = 3;
}

message ValidateRequest
{
  string room_id = 1;
  string date = 2;
  string start_time = 3;
  string end_time = 4;
}

message ValidateResponse
{
  bool is_valid = 1;
  repeated Conflict conflicts = 2;
  ValidationDetails details = 3;
}

message OcupiedIntervalsRequest
{
  string room_id = 1;
  string date = 2;
}

message Interval
{
  string booking_id = 1;
  string start_time = 2;
  string end_time = 3;
  string user_id = 4;
  string note = 5;
}

message OcupiedIntervalsResponce
{
  repeated Interval intervals = 1;
}

service RoomService
{
  rpc ComputeIntervals(ComputeIntervalsRequest) returns (ComputeIntervalsResponse);
  rpc Validate(ValidateRequest) returns (ValidateResponse);
  rpc OcupiedIntervals(OcupiedIntervalsRequest) returns (OcupiedIntervalsResponce);
}